# ILLBEBACKEND

./: .gitignore  .pre-commit-config.yaml  GEN.RULES.md  MCP-BEST-PRACTICES-2025.md  README.md  SEARCH_TOOL_FIX.md  config.yaml  mypy.ini  plan.md  pyproject.toml  setup.sh
examples/: mcp-server-example.yaml  test_client.py
src/: __init__.py  main.py
src/adapters/: __init__.py  base.py  openai_adapter.py
src/mcp/: __init__.py  client.py  models.py
src/mcp/tools/: __init__.py  registry.py  web_search.py
src/models/: __init__.py  config.py  messages.py
src/server/: __init__.py  websocket_server.py
src/utils/: __init__.py  logging.py
tests/: __init__.py  test_messages.py
